# gamer-context-for-llm

./: .dockerignore  .gitignore  Dockerfile  LICENSE.txt  README.md  fly.toml  package-lock.json  package.json  pyproject.toml  ruff.toml  server.py  tailwind.config.js
src/: app.py  middlewares.py  settings.py  steam_api.py
src/static/: copy_context.js  input.css  save_context.js
src/templates/: base.html  context.html  index.html  playground.html
src/templates/components/: content-area.html  context.html  footer.html  games-list.html
src/templates/pages/: app.html  base.html  login.html
